fix(Login): Fix scrolling on mobile
Fix janky scrolling on login screen for phones.

--- a/app/login/styles.less
+++ b/app/login/styles.less
@@ -13,6 +13,11 @@
     overflow-y: auto;
     height: 100%;
 
+    .phone({
+
+        height: auto;
+    });
+
     .icon-krossover-logo {
 
         .full-page-icon-krossover-logo;
